--- a/Red Inventory Management/Inventory Management.csproj
+++ b/Red Inventory Management/Inventory Management.csproj
@@ -71,6 +71,9 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Facebook, Version=6.0.10.0, Culture=neutral, PublicKeyToken=58cb4f2111d1e6de, processorArchitecture=MSIL">
+      <HintPath>..\packages\Facebook.7.0.6\lib\net45\Facebook.dll</HintPath>
+    </Reference>
     <Reference Include="log4net, Version=2.0.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.15\lib\net45\log4net.dll</HintPath>
     </Reference>
@@ -152,6 +155,10 @@
     </Compile>
     <Compile Include="Views\Database\SetupConnectionMenuView.xaml.cs">
       <DependentUpon>SetupConnectionMenuView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Login\ApiResults.cs" />
+    <Compile Include="Views\Login\FBDialog.xaml.cs">
+      <DependentUpon>FBDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Transaction\ListTransactionWindowr.xaml.cs">
       <DependentUpon>ListTransactionWindowr.xaml</DependentUpon>
@@ -235,6 +242,10 @@
     <Page Include="Views\Database\SetupConnectionMenuView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Login\FBDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\Transaction\ListTransactionWindowr.xaml">
       <Generator>MSBuild:Compile</Generator>
