--- a/Red Inventory Management/packages.config
+++ b/Red Inventory Management/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Facebook" version="7.0.6" targetFramework="net48" />
   <package id="log4net" version="2.0.15" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
 </packages>
