--- a/Red Inventory Management/Inventory Management.csproj
+++ b/Red Inventory Management/Inventory Management.csproj
@@ -124,6 +124,7 @@
     <Compile Include="ViewModel\Lists\UserTransactionsViewModel.cs" />
     <Compile Include="ViewModel\Lists\ListDetails\InventoryDetailsViewModel.cs" />
     <Compile Include="ViewModel\Lists\ListDetails\UserTransactionsDetailsViewModel.cs" />
+    <Compile Include="ViewModel\Login\EditUserViewModel.cs" />
     <Compile Include="ViewModel\Transaction\NewTransactionViewModel.cs" />
     <Compile Include="ViewModel\Tables\Edit\EditTransactionViewModel.cs" />
     <Compile Include="ViewModel\Lists\InventoryViewModel.cs" />
@@ -159,6 +160,9 @@
     <Compile Include="Views\Login\ApiResults.cs" />
     <Compile Include="Views\Login\FBDialog.xaml.cs">
       <DependentUpon>FBDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Login\EditUserWindow.xaml.cs">
+      <DependentUpon>EditUserWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Transaction\ListTransactionWindowr.xaml.cs">
       <DependentUpon>ListTransactionWindowr.xaml</DependentUpon>
@@ -244,6 +248,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Login\FBDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\Login\EditUserWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
