--- a/Red Inventory Management/App.config
+++ b/Red Inventory Management/App.config
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
 
   <log4net>
@@ -12,48 +12,150 @@
       <!-- Comment out the filter, to log everything -->
       <!-- Levels: DEBUG < INFO < WARN < ERROR < FATAL -->
       <filter type="log4net.Filter.LevelRangeFilter"> 
-        <levelMin value="WARN"/>
-        <levelMax value="FATAL"/>
+        <levelMin value="WARN" />
+        <levelMax value="FATAL" />
       </filter>
       
-      <file value=".\InventoryManagementLog.txt"/>
-      <appendToFile value="true"/>
-      <rollingStyle value="Size"/>
-      <maximumFileSize value="1MB"/>
-      <maxSizeRollBackups value="5"/>
-      <staticLogFileName value="true"/>
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <file value=".\InventoryManagementLog.txt" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maximumFileSize value="1MB" />
+      <maxSizeRollBackups value="5" />
+      <staticLogFileName value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date{dd/MM/yyyy HH:mm:ss,fff} - %level: [%logger]%newlineMethod - %method%newlineLine number - %line%newlineMessage - %message%newline%exception%newline%newline"/>
+        <conversionPattern value="%date{dd/MM/yyyy HH:mm:ss,fff} - %level: [%logger]%newlineMethod - %method%newlineLine number - %line%newlineMessage - %message%newline%exception%newline%newline" />
       </layout>
     </appender>
 
     <root>
-      <level value="DEBUG"/>
-      <appender-ref ref="RollingFileAppender"/>
+      <level value="DEBUG" />
+      <appender-ref ref="RollingFileAppender" />
     </root>
   </log4net>
   
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
 
   <system.data>
     <DbProviderFactories>
-      <add name="SqlClient Data Provider" invariant="System.Data.SqlClient" description=".Net Framework Data Provider for SqlServer" type="System.Data.SqlClient.SqlClientFactory, System.Data,
-       Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
+      <add name="SqlClient Data Provider" invariant="System.Data.SqlClient" description=".Net Framework Data Provider for SqlServer" type="System.Data.SqlClient.SqlClientFactory, System.Data,        Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     </DbProviderFactories>
   </system.data>
   
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb"/>
+        <parameter value="mssqllocaldb" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
   
+  <runtime>
+  
+       <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="Microsoft.Extensions.Primitives" publicKeyToken="adb9793829ddae60" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-3.1.30.0" newVersion="3.1.30.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="Microsoft.Extensions.Configuration.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-3.1.30.0" newVersion="3.1.30.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-3.1.30.0" newVersion="3.1.30.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="Microsoft.Extensions.Caching.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-3.1.30.0" newVersion="3.1.30.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="Microsoft.Extensions.Options" publicKeyToken="adb9793829ddae60" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-3.1.30.0" newVersion="3.1.30.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-3.1.30.0" newVersion="3.1.30.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="Microsoft.Extensions.DependencyInjection" publicKeyToken="adb9793829ddae60" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-3.1.30.0" newVersion="3.1.30.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
+  
+            </dependentAssembly>
+  
+       </assemblyBinding>
+  
+  </runtime>
 </configuration>
